# lotsa

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  CONTRIBUTING.md  LICENSE  Makefile  PRIVACY.md  README.md  SECURITY.md  TERMS.md  hatch_build.py  pyproject.toml
.github/workflows/: ci.yml  claude-code-review.yml
deploy/: Caddyfile.example  README.md  check-sandbox.sh  deploy.env.example  install.sh  lotsa.service
docs/: launch-runbook.md  post-launch-plan.md
docs/adr/: ADR-012-shadcn-ui-for-ce-dashboard.md  ADR-013-orchestrator-owns-git-state.md  ADR-014-jobs-as-unified-primitive.md  ADR-015-orchestrator-syncs-branch-to-main.md  ADR-016-worktree-persisted-task-artifacts.md  ADR-017-agent-activity-visibility.md  ADR-018-task-branches-stay-synced-with-upstream.md  ADR-019-operator-acknowledged-overrides.md  ADR-020-typed-atomic-transition-helper.md  ADR-021-per-task-process-dispatch.md  ADR-022-per-step-model-selection.md  ADR-023-multi-provider-runner-registry.md  ADR-024-deterministic-git-steps.md  ADR-025-layered-system-prompt-authority.md  ADR-026-orchestrator-managed-background-tasks.md  ADR-027-process-promotion.md  ADR-028-claude-agent-sdk-runner.md  ADR-029-multi-project-support.md  ADR-030-pr-lifetime-monitoring.md  ADR-031-runtime-verification.md  ADR-033-feedback-tracking-by-comment-identity.md  ADR-034-chat-first-task-creation.md  ADR-035-cross-repo-epic-coordinator.md  ADR-036-first-run-reliability.md  ADR-037-web-ui-first-run.md  ADR-038-host-sandboxed-agent-execution.md  ADR-039-outcome-evaluation-vs-markers.md  ADR-040-restart-resilient-orchestration.md  ADR-041-project-toolchain-environment-provisioning.md  ADR-042-lotsa-deploy-cli.md  ADR-043-two-phase-think-execute.md  ADR-044-workflows-for-agents.md
lotsa/: CLAUDE.md  Dockerfile.agent  README.md  __init__.py  __main__.py  agents.py  attachments.py  cli.py  commit_step.py  config.py  console_notifier.py  db.py  deploy.py  diff.py  docker_runner.py  flows.py  github_client.py  migrations.py  orchestrator.py  overrides.py  pr_monitor.py  preflight.py  provenance.py  push_step.py  registry.py  status.py
lotsa/engines/: __init__.py  pr_monitor.py
lotsa/frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  (+3 more)
rigg/: CLAUDE.md  __init__.py  activity.py  agent_runner.py  blocking.py  claude_agent_sdk_runner.py  git.py  models.py  orchestration.py  parsing.py  prompt_registry.py  proof_collector.py  review_pipeline.py  scrub.py  state_machine.py
scripts/: dev.sh  seed_demo.py  verify.sh
(+211 files in other folders)
